finally adding actual build folder

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -8,8 +8,9 @@
 # testing
 /coverage
 
+##### I changed this to include the build folder because the server doesn't have enough ram lol
 # production
-/build
+#/build
 
 # misc
 .DS_Store
